Implemented Login with e-mail and password and user registration; started implementing Google signin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="loginAppBarTitle">Entrar</string>
     <string name="registerAppBarTitle">Criar Conta</string>
     <string name="homeAppBarTitle">Lista de Tarefas</string>
+
+    <string name="passwordMismatchError">As senhas não coincidem</string>
+    <string name="userRegistrationFailedError">Falha ao criar usuário</string>
+    <string name="webClientId">846382811572-ibntttp10cjo0fk8at5f4nu46i15kq85.apps.googleusercontent.com</string>
 </resources>
