Refactored LoginActivity to display error Toast if login fails

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
 
     <string name="passwordMismatchError">As senhas não coincidem</string>
     <string name="userRegistrationFailedError">Falha ao criar usuário</string>
+    <string name="loginFailedError">"Falha ao efetuar login"</string>
 </resources>
