Finished refactoring the Google Login button to a Fragment along with it's logic and refactored LoginActivity.kt to remove any commands related to Google Signin process. Also, added the Google Login button fragment to activity_register.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="profileUpdateButtonText">Atualizar Perfil</string>
     <string name="cameraFABDescription">Carregar imagem da câmera</string>
     <string name="profileLogoutButtonText">Sair da conta</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
