Finished implementing tasks creation, with description and due date; implemented task update.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="newTaskTitleText">Nova Tarefa</string>
     <string name="newTaskDateHintText">Data</string>
     <string name="btnSaveText">Salvar</string>
+    <string name="updateTaskText">Atualizar tarefa</string>
+    <string name="dateButtonText">Data</string>
 </resources>
