Refactored app to use a CustomButtonFragment as component replacing common buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="btnSaveText">Salvar</string>
     <string name="updateTaskText">Atualizar tarefa</string>
     <string name="dateButtonText">Data</string>
+    <string name="googleRegisterButtonText">Registrar com Google</string>
+    <string name="orText">OU</string>
 </resources>
