--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,8 @@
     <string name="forgotPasswordToolbarText">Esqueci minha Senha</string>
     <string name="forgotPasswordInstructions">Enviaremos um e-mail com instruções para redefinir sua senha para o endereço informado no campo abaixo.</string>
     <string name="sendEmailBtnText">Enviar E-mail</string>
+    <string name="cameraPermissionGrantedText">Permissão de câmera concedida</string>
+    <string name="cameraPermissionDeniedText">Permissão de câmera negada</string>
+    <string name="galleryPermissionGrantedText">Permissão de galeria concedida</string>
+    <string name="galleryPermissionDeniedText">Permissão de galeria negada</string>
 </resources>
