Extracted image loading error message to strings.xml

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -53,4 +53,5 @@
     <string name="cameraPermissionDeniedText">Camera permission denied</string>
     <string name="galleryPermissionGrantedText">Gallery permission granted</string>
     <string name="galleryPermissionDeniedText">Gallery permission denied</string>
+    <string name="imageLoadErrorText">Failed to load image</string>
 </resources>
