Finished implementing weather data on the app

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -54,4 +54,6 @@
     <string name="galleryPermissionGrantedText">Gallery permission granted</string>
     <string name="galleryPermissionDeniedText">Gallery permission denied</string>
     <string name="imageLoadErrorText">Failed to load image</string>
+    <string name="weatherTemperature">%s°C</string>
+    <string name="weatherErrorText">Failed to load weather data</string>
 </resources>
