--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,10 @@
     <string name="imageLoadErrorText">Falha ao carregar imagem</string>
     <string name="weatherTemperature">%s°C</string>
     <string name="weatherErrorText">Falha ao carregar dados de clima</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="unauthorizedNotificationText">Notificações não autorizadas</string>
+    <string name="notificationScheduledText">Notificação agendada</string>
+    <string name="taskCreatedText">Tarefa criada</string>
+    <string name="taskCreatedMessageText">"A tarefa %s foi criada e expira dia %s"</string>
+    <string name="taskUpdatedText">Tarefa atualizada</string>
+    <string name="taskUpdatedMessageText">"Sua tarefa %s foi atualizada e expira dia %s"</string>
 </resources>
